# project_management_2

./: .gitignore  Cargo.toml  GUIDA.md  README.md  efforts.json
src/: callbacks.rs  conversions.rs  date_utils.rs  file_io.rs  lib.rs  main.rs  models.rs  utils.rs
src/callbacks/: mod.rs  on_add_row.rs  on_changed_effort.rs  on_del_row.rs  on_hide_dev.rs  on_move_effort.rs  on_new_project.rs  on_save_file.rs  on_search.rs  on_set_dev_effort.rs  rebuild_project.rs
src/models/: day.rs  devs.rs  effort_by_date.rs  effort_by_dev.rs  effort_by_prj.rs  efforts.rs  mod.rs  sovra.rs
ui/: app-window.slint  footer.slint  global.slint  header.slint  left-column.slint  left-footer.slint  right-column.slint  right-footer.slint  styles.slint
